# users-groups

./: README.md  manage.py  pyproject.toml  scripts.py
users/: admin.py  authentication.py  managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users_groups/: asgi.py  settings.py  urls.py  wsgi.py
